--- a/javascript/assignment3/index.html
+++ b/javascript/assignment3/index.html
@@ -35,44 +35,42 @@
 		</tr>
 		<tr>
 			<td>Total:</td>
-			<td> <input type="text" id="txtTotal" value="Total:" disabled></input> = </td>
+			<td><input type="text" id="txtTotal" value="Total:" disabled></input> = </td>
 			<td><span id="spanTotal"></span></td>
 		</tr>
 	</table>
 	<script>
 		window.onload = function(){
-			$('btnCalculate').onclick=calculate;
+			$('btnCalculate').onclick=coinCount;
 		}
-		var calculate = function(){
+		var coinCount = function(){
 				//initialize main change variable and trim for whitespace
 			 	var change = $('txtChange').value.trim();
+
+				//Keeeping it a little DRY-er
+				var changeCount = function(coinValue){
+					var count = 0;
+					while(change>=coinValue){
+						change-=coinValue;
+						count++;
+					}
+					return count;
+				}
+				//Edge case that more coins are needed, Canadian nickels?
+				var valueCalc = function(count, coinValue){
+					//formatting for display as cents per assignment
+					return (count*(coinValue/100)).toFixed(2);
+				}
 
 				//checking for integer and non-blank space as well as range
 				if(isInt(change)===true&&!change==""&&change<100&&change>=0){
 
-				//initialize variables to hold counts
-				var quarterCount = 0;
-				var dimeCount = 0;
-				var nickelCount = 0;
-				var pennyCount = 0;
+				//initialize variables to hold count output
+				var quarterCount = changeCount(25);
+				var dimeCount = changeCount(10);
+				var nickelCount = changeCount(5);
+				var pennyCount = changeCount(1);
 
-				//begin count
-				while(change>=25){
-					change-=25;
-					quarterCount++;
-				}
-				while(change>=10){
-					change-=10;
-					dimeCount++;
-				}
-				while(change>=5){
-					change-=5;
-					nickelCount++;
-				}
-				while(change>=1){
-					change-=1;
-					pennyCount++;
-				}
 
 				//returning coin count to input fields
 				$('txtQuarter').value = quarterCount;
@@ -81,11 +79,13 @@
 				$('txtPenny').value = pennyCount;
 
 				//calculating cent values, formatting for display as money, and returning to spans
-				$('spanQuarter').innerHTML = (quarterCount*.25).toFixed(2);
-				$('spanDime').innerHTML = (dimeCount*.10).toFixed(2);
-				$('spanNickel').innerHTML = (nickelCount*.05).toFixed(2);
-				$('spanPenny').innerHTML = (pennyCount*.01).toFixed(2);
+				$('spanQuarter').innerHTML = valueCalc(quarterCount, 25);
+				$('spanDime').innerHTML = valueCalc(dimeCount, 10);
+				$('spanNickel').innerHTML = valueCalc(nickelCount, 5);
+				$('spanPenny').innerHTML = valueCalc(pennyCount, 1);
+
 				$('spanTotal').innerHTML = ($('txtChange').value*.01).toFixed(2);
+
 			}else{
 				//catch all for invalid input
 				alert("Please enter a valid integer from 0 to 99");
@@ -93,10 +93,12 @@
 			//position for new input regardless of if/else outcome
 			$('txtChange').select();
 		}
+
 		//determine if number is an integer
 		var isInt=function(number){
 			return number%1===0;
 		}
+
 		//selection function used in class
 		var $ = function(id){
 			return document.getElementById(id);
